--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,21 @@
 body {
     margin: 0;
     overflow: hidden;
-    background-color: #f7f7f7;
+    background-color: #e4e4e4;
     /* Light background color */
 }
 
 #gameCanvas {
     display: block;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: #9e9e9e;
     /* White canvas background */
+    width: 100vw;
+}
+
+.he {
+    position: absolute;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: black;
+    color: white;
 }
